FIX dark mode menu

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,7 @@ textarea {
 }
 
 .dropdown-link {
-  @apply flex p-2 hover:bg-gray-200 bg-white shadow-md transition duration-150 z-10 border-[1px] border-neutral-100 dark:hover:bg-gray-900;
+  @apply flex p-2 hover:bg-gray-200 bg-white shadow-md transition duration-150 z-10 border-[1px] border-neutral-100  dark:border-gray-700 dark:bg-gray-800 dark:hover:bg-gray-700;
 }
 
 .alert-error {
